# sappp

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: workpackage.md  workpackage.yml
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: CODING_STYLE_CPP23.md  DEVELOPMENT.md  KNOWN_ISSUES.md  QUALITY_GATE_IMPROVEMENTS.md  QUALITY_GATE_STRATEGY.md  SAPpp_Architecture_Design_v0.1.md  SAPpp_Detailed_Design_v0.1.md  SAPpp_Implementation_Approach_Report_v1.md  SAPpp_Implementation_Directive_v0.1.md  SAPpp_SRS_v1.1.md  sem.v1.md
docs/SAPpp_Design_Addons_v0.1/: README.md
docs/SAPpp_Design_Addons_v0.1/ADR/: ADR-0001-analyzer-validator-split.md  ADR-0002-build-capture.md  ADR-0003-frontend-clang.md  ADR-0004-normalized-ir.md  ADR-0005-po-generation-and-id.md  ADR-0006-unknown-ledger.md  ADR-0007-certificate-cas.md  ADR-0008-proof-system-v1.md  ADR-0009-determinism-rules.md  ADR-0010-pack-and-diff.md  ADR-0011-specdb-contract-ir-and-tier.md  ADR-0101-canonical-json-strict.md  ADR-0102-ir-anchor-stability.md  ADR-0103-semantics-version-and-litmus.md  ADR-0104-specdb-authoring-format.md  ADR-0105-validator-language-and-packaging.md  ADR-0106-exception-concurrency-unknown-codes.md
docs/SAPpp_Design_Addons_v0.1/docs/: CLI_Spec_v0.1.md  Open_Issues_and_Challenges_v0.1.md
docs/SAPpp_Design_Addons_v0.1/schemas/: cert_index.v1.schema.json  contract_ir.v1.schema.json  diff.v1.schema.json  nir.v1.schema.json  pack_manifest.v1.schema.json  po.v1.schema.json  source_map.v1.schema.json  specdb_snapshot.v1.schema.json  validated_results.v1.schema.json
include/sappp/: analyzer.hpp  build_capture.hpp  canonical_json.hpp  certstore.hpp  common.hpp  po.hpp  print.hpp  report.hpp  require_cpp23.hpp  schema_validate.hpp  specdb.hpp  validator.hpp  version.hpp
include/sappp/report/: explain.hpp
libs/analyzer/: CMakeLists.txt  analyzer.cpp  analyzer.hpp
libs/build_capture/: CMakeLists.txt  build_capture.cpp
libs/canonical/: CMakeLists.txt  canonical_json.cpp
libs/certstore/: CMakeLists.txt  certstore.cpp
libs/common/: CMakeLists.txt  path.cpp  schema_validate.cpp  sha256.cpp
libs/frontend_clang/: CMakeLists.txt  frontend.cpp  frontend.hpp
libs/ir/: CMakeLists.txt  nir.hpp
libs/po/: CMakeLists.txt  po.cpp  po_generator.cpp  po_generator.hpp
libs/report/: CMakeLists.txt  explain.cpp  report.cpp
libs/specdb/: CMakeLists.txt  specdb.cpp
libs/validator/: CMakeLists.txt  validator.cpp  validator.hpp
schemas/: analysis_config.v1.schema.json  build_snapshot.v1.schema.json  cert.v1.schema.json  unknown.v1.schema.json
scripts/: agent-final-check.sh  check-env.sh  docker-ci.sh  install-hooks.sh  pre-commit-check.sh  pre-push-check.sh  quick-check.sh  run-benchmarks.sh  run-clang-format.sh  run-clang-tidy.sh  run-coverage.sh  run-schema-validation.sh
scripts/lib/: common.sh  test-common.sh
tests/: CMakeLists.txt
tests/analyzer/: CMakeLists.txt  test_analyzer.cpp  test_analyzer_budget.cpp  test_analyzer_contracts.cpp  test_analyzer_points_to.cpp  test_analyzer_unknown_codes.cpp
tests/benchmarks/: CMakeLists.txt  bench_canonical.cpp
tests/build_capture/: CMakeLists.txt  test_build_capture.cpp
tests/determinism/: CMakeLists.txt  test_canonical_json.cpp  test_certstore.cpp  test_e2e_determinism.cpp  test_path.cpp  test_po_determinism.cpp  test_sha256.cpp
tests/end_to_end/: CMakeLists.txt  litmus_div0.c  litmus_double_free.cpp  litmus_exception_raii.cpp  litmus_invalid_free.cpp  litmus_misaligned.c  litmus_null.c  litmus_oob.c  litmus_signed_overflow.c  litmus_uninit_read.cpp  litmus_use_after_lifetime.cpp  litmus_vcall.cpp  test_litmus_e2e.cpp
tests/end_to_end/determinism_jobs/: CMakeLists.txt  test_determinism_jobs.cpp
tests/end_to_end/litmus_div0/: CMakeLists.txt  input.cpp
tests/end_to_end/litmus_exception_raii/: CMakeLists.txt  input.cpp
tests/end_to_end/litmus_null/: CMakeLists.txt  input.cpp
tests/end_to_end/litmus_oob/: CMakeLists.txt  input.cpp
tests/frontend_clang/: CMakeLists.txt  test_frontend_clang.cpp
tests/po/: CMakeLists.txt  test_po_generator.cpp
tests/report/: CMakeLists.txt  test_explain.cpp  test_report.cpp
tests/schemas/: CMakeLists.txt  test_schema_validate.cpp
tests/specdb/: CMakeLists.txt  test_specdb.cpp
tests/validator/: CMakeLists.txt  test_validator.cpp
tools/sappp/: CMakeLists.txt  main.cpp
